# bitschema

./: .gitignore  LICENSE  README.md  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  STATE.md.backup
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-runtime-encoding/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  (+5 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
bitschema/: __init__.py  __main__.py  codegen.py  decoder.py  encoder.py  errors.py  jsonschema.py  layout.py  loader.py  models.py  output.py  parser.py  validator.py  visualization.py
examples/: README.md  compact_flags.yaml  sensor_reading.json  user.json  user.yaml
tests/: README.md  conftest.py  test_bitmask_fields.py  test_boundary_conditions.py  test_cli.py  test_codegen.py  test_codegen_equivalence.py  test_date_fields.py  test_decoder.py  test_encoder.py  test_integration.py  test_jsonschema.py  test_layout.py  test_loader.py  test_output.py  test_parser.py  test_roundtrip.py  test_schema_validation.py  test_validator.py  test_visualization.py
tests/fixtures/: invalid_schema.json  invalid_syntax.json  invalid_syntax.yaml  valid_schema.json  valid_schema.yaml
(+20 files in other folders)
