[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bitschema"
version = "0.1.0"
description = "Automatically derive optimal bit-level layouts for structured data and pack them into 64-bit integers"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "TBD", email = "tbd@example.com"}
]
dependencies = [
    "pydantic>=2.12.5",
    "PyYAML>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "hypothesis>=6.151.9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bitschema*"]
