[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bitschema"
version = "1.0.0"
description = "Mathematically correct, deterministic bit-packing for Python - pack structured data into 64-bit integers"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Ran Brandes", email = "ran1979@users.noreply.github.com"}
]
dependencies = [
    "pydantic>=2.12.5",
    "PyYAML>=6.0.3",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "hypothesis>=6.151.9",
    "jsonschema>=4.0.0",
]

[project.scripts]
bitschema = "bitschema.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bitschema*"]
